--- a/Ironcrunch/src/Ironcrunch.styl
+++ b/Ironcrunch/src/Ironcrunch.styl
@@ -132,6 +132,7 @@ button[type="roll"]
 
 button[type="roll"]:hover
   font-weight: bold
+  transition: .5s ease;
 
 .sheet-heading-left
   text-align: left
@@ -143,7 +144,8 @@ hr
   background-image: linear-gradient(to right, #ccc, #333, #ccc)
 
 textarea
-  font-family: 'Crimson Text', arial, sans-serif
+  font-family 'Crimson Text', arial, sans-serif
+  max-width 830px;
 
 // Pages
 @import './pages/index'
@@ -201,11 +203,13 @@ textarea
 .sheet-track-box-input:hover ~ .sheet-track-box-back,
 .sheet-resources-box-input:hover ~ .sheet-resources-box-back
   background: #ccc
+  transition: .5s ease;
 
 .sheet-track-box-input:checked ~ .sheet-track-box-back,
 .sheet-resources-box-input:checked ~ .sheet-resources-box-back
   background: #4C4D4F
   color: white
+  transition: .5s ease;
 
 .sheet-track-box-value
   padding: 0px
@@ -336,15 +340,10 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
   color: #4C4D4F
   display: flex
 
-.sheet-hide
-  display: none
-
-div.sheet-showhide
-  display: none
-
 span.sheet-showhide:checked
   background-color: #4C4D4F
   color: white
+  transition: .5s ease;
 
 span.sheet-showhide
   display: inline
@@ -361,10 +360,16 @@ span.sheet-showhide:hover
   padding: 2px 4px
   background-color: #ccc
   color: #4C4D4F
+  transition: .5s ease;
 
-div.sheet-showhide,
+div.sheet-showhide
+  transition: opacity 1s ease-out;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+
 .sheet-hide
-  display: none
+  display none
 
 /* ORACLES */
 input[type=radio].sheet-action:checked ~ div.sheet-action,
@@ -393,6 +398,8 @@ input[type=radio].sheet-ask-the-oracle:checked ~ div.sheet-ask-the-oracle,
 input[type=radio].sheet-endure-harm:checked ~ div.sheet-endure-harm,
 input[type=radio].sheet-endure-stress:checked ~ div.sheet-endure-stress
   display: block
+  opacity 1
+  height: auto;
 
 /* MOVES */
 input[type=radio].sheet-face-danger:checked ~ div.sheet-face-danger,
@@ -444,9 +451,12 @@ input[type=radio].sheet-learn-from-failures:checked ~ div.sheet-learn-from-failu
 input[type=radio].sheet-advance-threat:checked ~ div.sheet-advance-threat,
 input[type=radio].sheet-take-hiatus:checked ~ div.sheet-take-hiatus
   display: block
+  opacity 1
+  height: auto;
 
 .sheet-oracle-container
   display: flex
+  opacity 1
   /* justify-content: space-around; */
   /* width: 500px; */
   font-family: Verdana, Arial, sans-serif
@@ -514,6 +524,7 @@ span.sheet-oracle-result
 .sheet-oracle-show:hover
   background: #969696
   cursor: pointer
+  transition: .5s ease;
 
 .sheet-column-wrap
   flex-flow: column wrap
@@ -621,7 +632,8 @@ input[type="checkbox"].sheet-asset-path:checked ~ div.sheet-path,
 input[type="checkbox"].sheet-asset-combat-talent:checked ~ div.sheet-combat-talent,
 input[type="checkbox"].sheet-asset-ritual:checked ~ div.sheet-ritual,
 input[type="checkbox"].sheet-asset-custom:checked ~ div.sheet-asset-custom
-  display: block
+  opacity 1
+  height: auto;
 
 input[type="checkbox"].sheet-cave-lion:checked ~ div.sheet-cave-lion,
 input[type="checkbox"].sheet-giant-spider:checked ~ div.sheet-giant-spider,
@@ -698,14 +710,20 @@ input[type="checkbox"].sheet-tether:checked ~ div.sheet-tether,
 input[type="checkbox"].sheet-totem:checked ~ div.sheet-totem,
 input[type="checkbox"].sheet-visage:checked ~ div.sheet-visage,
 input[type="checkbox"].sheet-ward:checked ~ div.sheet-ward
-  display: block
+  opacity 1
+  height: auto;
 
 select.sheet-path-dropdown option[value="alchemist"] ~ .sheet-alchemist
   display: flex
+  opacity 1
+  height: auto;
 
 input[type="radio"].sheet-asset-builder:checked ~ div.sheet-asset-builder,
 input[type="radio"].sheet-asset-view:checked ~ div.sheet-asset-view
   display: block
+  transition: .5s ease;
+  opacity 1
+  height: auto;
 
 input[type="checkbox"].sheet-builder-titles-1:checked ~ div.sheet-builder-titles-1,
 input[type="checkbox"].sheet-builder-titles-2:checked ~ div.sheet-builder-titles-2,
@@ -723,6 +741,8 @@ input[type="checkbox"].sheet-track-dropdown-4:checked ~ div.sheet-track-dropdown
 input[type="checkbox"].sheet-track-dropdown-5:checked ~ div.sheet-track-dropdown-5,
 input[type="checkbox"].sheet-track-dropdown-6:checked ~ div.sheet-track-dropdown-6
   display: flex
+  opacity 1
+  height: auto;
 
 div.sheet-builder-titles-1,
 div.sheet-builder-titles-2,
@@ -972,6 +992,7 @@ input[type="checkbox"].sheet-show-bond-info:hover ~ span.sheet-show-bond-info
   padding: 2px 4px
   background-color: #ccc
   color: #4C4D4F
+  transition: .5s ease;
 
 input[type="checkbox"].sheet-show-bond-info:checked ~ span.sheet-show-bond-info
   border-radius: 4px
