--- a/Ironcrunch/src/components/misses/track.pug
+++ b/Ironcrunch/src/components/misses/track.pug
@@ -4,13 +4,15 @@ include ../progress/box
 h3.sheet-divide &emsp;MISSES&emsp;
 div.sheet-misses-track
   div
+    label.sheet-clear-miss CLEAR
+      input(class="sheet-clear-miss sheet-hide" type="checkbox" name="attr_clear_misses")
     each index in track
-      select(name=`attr_misses-${index}` class="sheet-progress-input")
+      select(name=`attr_miss-${index}` class="sheet-progress-input sheet-miss-input")
         +progressBox
     input(
       type="text"
       class="sheet-hide"
       name="attr_misses-filled"
-      value="floor((@{misses-0}+@{misses-1}+@{misses-2}+@{misses-3}+@{misses-4}+@{misses-5}+@{misses-6}+@{misses-7}+@{misses-8}+@{misses-9})/4)"
+      value="floor((@{miss-0}+@{miss-1}+@{miss-2}+@{miss-3}+@{miss-4}+@{miss-5}+@{miss-6}+@{miss-7}+@{miss-8}+@{miss-9})/4)"
       disabled="true"
     )
