--- a/Ironcrunch/src/components/momentum/momentum.styl
+++ b/Ironcrunch/src/components/momentum/momentum.styl
@@ -6,13 +6,16 @@
 
 input[type=checkbox].sheet-momentum-burn:hover ~ div.sheet-momentum-burn-back
   background-color #ccc
+  transition: .5s ease;
 
 .sheet-momentum-box-input:hover ~ .sheet-momentum-box-back
   background: #ccc
+  transition: .5s ease;
 
 .sheet-momentum-box-input:checked ~ .sheet-momentum-box-back
   background: #4C4D4F
   color: white
+  transition: .5s ease;
 
 input[type=checkbox].sheet-momentum-burn
   width 68px
