--- a/Ironcrunch/src/components/nav/character.pug
+++ b/Ironcrunch/src/components/nav/character.pug
@@ -1,6 +1,6 @@
 - 
   var pages = [
-    { id: '1', text: 'Summary' },
+    { id: '1', text: 'Summary', checked: true },
     { id: '2', text: 'Vows' },
     { id: '3', text: 'Bonds' },
     { id: '4', text: 'Proficiencies' }
@@ -10,5 +10,8 @@ div.sheet-nav-bar
   each page in pages 
     div.sheet-nav-child
       label.sheet-page-label
-        input(type='radio' name='attr_character_page_button' class='sheet-hide sheet-page-button' value=page.id)
+        if page.checked
+          input(type='radio' name='attr_character_page_button' class='sheet-hide sheet-page-button' value=page.id checked)
+        else
+          input(type='radio' name='attr_character_page_button' class='sheet-hide sheet-page-button' value=page.id)
         div.sheet-page-button-back=page.text
