--- a/Ironcrunch/src/components/nav/nav-bar.styl
+++ b/Ironcrunch/src/components/nav/nav-bar.styl
@@ -13,6 +13,7 @@
     cursor pointer
     &:hover
       background #ccc
+      transition: .5s ease;
 
 .sheet-page-button-back
   padding 0.1em 0em 0.1em 0em
@@ -20,12 +21,15 @@
 .sheet-page-button:checked ~ div.sheet-page-button-back
   background #4C4D4F
   color: white
+  transition: .5s ease;
 
 input[type=radio].sheet-bonds:checked ~ div.sheet-bonds,
 input[type=radio].sheet-summary:checked ~ div.sheet-summary,
 input[type=radio].sheet-vows:checked ~ div.sheet-vows,
 input[type=radio].sheet-proficiencies:checked ~ div.sheet-proficiencies
   display block
+  opacity 1
+  height: auto;
 
 .sheet-summary
   margin-top 1em
