--- a/Ironcrunch/src/components/progress/progress.styl
+++ b/Ironcrunch/src/components/progress/progress.styl
@@ -48,3 +48,34 @@ input.sheet-progress-name
   background-color: #ccc
   border: 2px solid #4C4D4F
   border-radius: 0
+  transition: .5s ease;
+
+// Ticks
+// TODO use div rather than ASCII characters
+// tick(angle)
+//   width: 40px;
+//   height: 2px;
+//   background-color: black;
+//   transform: rotate(angle);
+
+// div.sheet-tick-1
+//   tick(90deg)
+
+// div.sheet-tick-2
+//   tick(180deg)
+//   margin-top -2px
+
+// div.sheet-tick-3
+//   tick(45deg)
+//   margin-top -2px
+
+// div.sheet-tick-4
+//   tick(135deg)
+//   margin-top -2px
+
+// input.sheet-tick-1:checked ~ div.sheet-tick-1,
+// input.sheet-tick-2:checked ~ div.sheet-tick-2,
+// input.sheet-tick-3:checked ~ div.sheet-tick-3,
+// input.sheet-tick-4:checked ~ div.sheet-tick-4
+//   display block
+
