--- a/Ironcrunch/src/components/resources/resources.styl
+++ b/Ironcrunch/src/components/resources/resources.styl
@@ -14,6 +14,7 @@ label.sheet-health-reset
 
 label.sheet-health-reset:hover
   background #ccc
+  transition: .5s ease;
 
 h3.sheet-health-max
   font-size 14px
