--- a/Ironcrunch/src/components/stats/mixins/stats.pug
+++ b/Ironcrunch/src/components/stats/mixins/stats.pug
@@ -1,6 +1,6 @@
 - var stats = [{ lower: 'edge', upper: 'EDGE', capital: 'Edge', placeholder: 'grace' }, { lower: 'heart', upper: 'HEART', capital: 'Heart', placeholder: 'soul' }, { lower: 'iron', upper: 'IRON', capital: 'Iron', placeholder: 'body', }, { lower: 'shadow', upper: 'SHADOW', capital: 'Shadow', placeholder: 'guile' }, { lower: 'wits', upper: 'WITS', capital: 'Wits', placeholder: 'mind' }]
 
-div.sheet-stats
+mixin statBuilder()
   each stat in stats
     div.sheet-stat
       h3.sheet-stats-title=stat.upper
@@ -10,7 +10,15 @@ div.sheet-stats
         name=`attr_${stat.lower}`
         value='1'
       )
-      label.sheet-roll-label ROLL
+      span(class='sheet-stats-max') MAX
+      span(class='sheet-stats-max' name=`attr_max_${stat.lower}`)
+
+mixin statStatic()
+  each stat in stats
+    div.sheet-stat
+      label.sheet-roll-label
+        h3.sheet-stats-title=stat.upper
+        span(class='sheet-stats-input' name=`attr_${stat.lower}`)
         button(
         type='roll'
         class='sheet-hide'
