--- a/Ironcrunch/src/components/vows/vows.pug
+++ b/Ironcrunch/src/components/vows/vows.pug
@@ -1,4 +1,4 @@
-- var track = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
+- var track = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
 - var difficulties = { 1:'Troublesome', 2: 'Dangerous', 3: 'Formidable', 4: 'Extreme', 5: 'Epic' }
 
 mixin progressBox
@@ -18,18 +18,21 @@ div.sheet-vows
 
     div.sheet-vow
       div
-        input(class="sheet-clear-vow sheet-hide" type="radio" name="attr_clear_vow" value="0")
-        input(class="sheet-clear-vow" type="radio" name="attr_clear_vow" value="1")
-        span.sheet-vow-clear-label Clear
+        //- TODO: Mark progress based on difficulty
+        label.sheet-mark-vow MARK
+          input(class="sheet-mark-vow sheet-hide" type="checkbox" name="attr_mark_progress")
+        label.sheet-vow-clear-label CLEAR
+          input(class="sheet-clear-vow sheet-hide" type="checkbox" name="attr_clear_vow")
         each index in track
           select(name=`attr_vow-${index}` class="sheet-progress-input")
-            +progressBox                           
-        button(
-          type="roll"
-          title="Fulfill your Vow"
-          name="rollVow"
-          value="&{template:ironcrunch_progress} {{header=@{character_name} <em>Fulfill Your Vow</em> }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}"
-        )               
+            +progressBox
+        label.sheet-fulfill-vow FULFILL 
+          button(
+            type="roll"
+            class='sheet-hide'
+            name="rollVow"
+            value="&{template:ironcrunch_progress} {{header=@{character_name} <em>Fulfill Your Vow</em> }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}"
+          )               
         input(
           type="text"
           class="sheet-hide"
