--- a/Ironcrunch/src/components/vows/vows.styl
+++ b/Ironcrunch/src/components/vows/vows.styl
@@ -5,32 +5,12 @@ input.sheet-vow-name
   margin-bottom: 0.2em
   margin-top: 1em
 
-input.sheet-clear-vow + .sheet-vow-clear-label
-  border-radius: 4px
-  padding: 2px 4px
-
-input.sheet-clear-vow
-  opacity: 0
-  width: 54px
-  margin-right: 22px
-  cursor: pointer
-
-.sheet-vow-clear-label
-  border: 1px solid #ccc
-  margin-left: -80px
-  width: 80px
-
-.sheet-clear-vow:hover + .sheet-vow-clear-label
-  border-radius: 4px
-  padding: 2px 4px
-  background-color: #ccc
-  color: #4C4D4F
-
+.sheet-fulfill-vow:hover,
+.sheet-mark-vow:hover,
 .sheet-vow-clear-label:hover
-  border-radius: 4px
-  padding: 2px 4px
   background-color: #ccc
   color: #4C4D4F
+  transition: .5s ease;
 
 .sheet-vows
   margin-bottom: 0px
@@ -47,8 +27,7 @@ input.sheet-clear-vow
   justify-content: center
   align-items: center
 
-.sheet-vow-name,
-.sheet-vow-clear-label
+.sheet-vow-name
   width: 100%
   font-weight: bold
   font-size: 14px
@@ -59,5 +38,16 @@ input.sheet-vow-name
   border-radius: 0
   margin-bottom: 0.2em
 
-.sheet-vow-clear-label
+.sheet-vow-clear-label,
+.sheet-mark-vow,
+.sheet-fulfill-vow
   display: inline
+  width: 100%
+  font-weight: bold
+  font-size: 14px
+  padding 0
+  margin 1em
+  height 40px
+  padding 0.2em 0.2em 0.2em 0.2em
+  border: 2px solid #494a4c
+  cursor: pointer
