--- a/Ironcrunch/src/pages/index.pug
+++ b/Ironcrunch/src/pages/index.pug
@@ -3,18 +3,27 @@ div.sheet-modes-show.sheet-hide
   div.sheet-mode-title
     h2.sheet-mode-title SELECT THE SHEET TYPE
   div.sheet-modes
-    div.sheet-mode
-      label.sheet-mode CHARACTER
-        input(type='radio' name='attr_mode_button' class='sheet-hide' value='1')
-      img(src)
 
-    div.sheet-mode
-      label.sheet-mode COMPANION
+    label.sheet-mode 
+      h4 CHARACTER
+      div.sheet-mode
+        input(type='radio' name='attr_mode_button' class='sheet-hide' value='1')
+        div.sheet-mode-image
+          img(src='https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironcrunch-new-sheet/Ironcrunch/assets/placeholder.png')
+
+    label.sheet-mode 
+      h4 COMPANION
+      div.sheet-mode
         input(type='radio' name='attr_mode_button' class='sheet-hide' value='2')
-    
-    div.sheet-mode
-      label.sheet-mode SHARED
+        div.sheet-mode-image
+          img(src='https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironcrunch-new-sheet/Ironcrunch/assets/placeholder.png')
+
+    label.sheet-mode 
+      h4 SHARED
+      div.sheet-mode
         input(type='radio' name='attr_mode_button' class='sheet-hide' value='3')
+        div.sheet-mode-image
+          img(src='https://raw.githubusercontent.com/LeeRhodes/roll20-character-sheets/ironcrunch-new-sheet/Ironcrunch/assets/placeholder.png')
 
 input(type='radio' name='attr_mode' class='sheet-character-mode sheet-hide' value='1')
 div.sheet-character-mode.sheet-hide
