--- a/Ironcrunch/src/pages/index.styl
+++ b/Ironcrunch/src/pages/index.styl
@@ -8,17 +8,27 @@ h2.sheet-mode-title
 div.sheet-mode-title
   margin-bottom 2em
 
-.sheet-mode
+label.sheet-mode
   text-align center
 
 label.sheet-mode
-  // border 2px solid #4C4D4F
-  margin 0em 1em 0em 1em
+  margin 0.5em
   padding 0
   cursor pointer
-  box-shadow 1px 1px 19px 6px rgba(0, 0, 0, 0.08)
+  box-shadow: 1px 1px 19px 6px rgba(0,0,0,0.15);
+  opacity 1
+  z-index 5
+  width: auto;
   &:hover
-    background #ccc
+    h4
+      color #797979
+      transition: .5s ease;
+    .sheet-mode-image
+      opacity 0.7
+      transition: .5s ease;
+  h4
+    margin-bottom 0.5em
+    margin-top 0.5em
 
 input[type=radio].sheet-character-mode:checked ~ div.sheet-character-mode,
 input[type=radio].sheet-companion-mode:checked ~ div.sheet-companion-mode,
@@ -28,8 +38,11 @@ input[type=radio].sheet-shared-mode:checked ~ div.sheet-shared-mode
 input[type=checkbox].sheet-modes-show:checked ~ div.sheet-modes-show
   display block
 
-.sheet-modes
-  transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  opacity: 1;
-  transform-style: preserve-3d;
-  z-index: 5;
+div.sheet-mode
+  display: flex
+  justify-content: center
+  width fit-content
+  margin 0
+
+.sheet-mode-image
+  display flex
