--- a/Ironcrunch/src/components/stats/stats.styl
+++ b/Ironcrunch/src/components/stats/stats.styl
@@ -1,16 +1,15 @@
 .sheet-stats
-  display: flex
   justify-content: space-evenly
   align-items: center
   border-radius: 0%
   margin-bottom 1em
-  margin-top 1em
 
 .sheet-stat
   display: flex
   flex-direction: column
   justify-content: center
   align-items: center
+  margin 1em
 
 .sheet-stats-title
   width: 100px
@@ -21,10 +20,12 @@
   line-height: 40px
   font-size: 28px
   text-align: center
-  background: transparent
   height: 50px !important
-  border: 2px solid #4C4D4F
   border-radius: 0
+
+input.sheet-stats-input
+  border: 2px solid #4C4D4F
+  background:#e6e7e8
 
 label.sheet-roll-label
   margin 0
@@ -32,5 +33,41 @@ label.sheet-roll-label
   width auto
   border 2px solid #4C4D4F
   cursor pointer
+  text-align: center
   &:hover
     background #ccc
+    transition .5s ease
+
+input[type=radio].sheet-stat-set:checked ~ div.sheet-stat-set
+  opacity 1
+  height auto
+  display flex
+  width auto
+  margin-left 5em
+
+input[type=radio].sheet-stat-edit:checked ~ div.sheet-stat-edit
+  opacity 1
+  height auto
+  display flex
+  width auto
+
+label.sheet-stat-toggle
+  margin 0
+  padding 0
+  border 2px solid #4c4d4f
+  text-align center
+  cursor pointer
+  &:hover
+    background #ccc
+    transition .5s ease
+
+div.sheet-stat-toggle.sheet-set-toggle
+  width 100%
+  height 0
+  margin 4em 1em 0em 1em
+
+div.sheet-stat-toggle.sheet-edit-toggle
+  transform rotate(90deg)
+  width 100%
+  height 0
+  margin-top 3.45em
