--- a/Ironcrunch/src/pages/companion/summary.pug
+++ b/Ironcrunch/src/pages/companion/summary.pug
@@ -1,5 +1,5 @@
 input(type='radio' name='attr_companion_page' class='sheet-summary sheet-hide' value='1' checked)
-div.sheet-summary.sheet-hide
-  include ../../components/stats/stats
+div.sheet-summary.sheet-showhide
+  include ../../components/stats/companion
   include ../../components/details/companion
   include ../../components/notes/notes
