--- a/Ironcrunch/src/components/motivations/motivations.pug
+++ b/Ironcrunch/src/components/motivations/motivations.pug
@@ -1,7 +1,6 @@
-- var motivations = [
-  { id: '', text: '' }
-]
+include ./data
 
+//- TODO: Cusom Motivations
 div.sheet-motivations
   fieldset.repeating_motivations
     div.sheet-motivation
@@ -11,5 +10,20 @@ div.sheet-motivations
             option(value=motivation.id)=motivation.text
 
       each motivation in motivations
-        input(type='checkbox' class='sheet-asset-companion sheet-hide' name=`attr_motivation_${motivation.id}`)
-        div(class=`sheet-motivation-${motivation.id} sheet-hide`)
+        input(
+          type='checkbox'
+          class=`sheet-motivation-${motivation.id} sheet-hide`
+          name=`attr_motivation_${motivation.id}`
+          style=``
+        )
+        div(class=`sheet-motivation sheet-motivation-${motivation.id} sheet-hide`)
+          div(class='sheet-motivation-description')
+            p=motivation.description
+          div(class='sheet-motivation-layer')
+            p=`<strong>Layer 1: </strong>${motivation.layer1}`
+          div(class='sheet-motivation-layer')
+            p=`<strong>Layer 2: </strong>${motivation.layer2}`
+          div(class='sheet-motivation-layer')
+            p=`<strong>Layer 3: </strong>${motivation.layer3}`
+          div(class='sheet-motivation-buyoff')
+            p=`<strong>Buyoff: </strong>${motivation.buyoff}`
