--- a/Ironcrunch/src/components/nav/character.pug
+++ b/Ironcrunch/src/components/nav/character.pug
@@ -2,8 +2,9 @@
   var pages = [
     { id: '1', text: 'Summary', checked: true },
     { id: '2', text: 'Vows' },
-    { id: '3', text: 'Bonds' },
-    { id: '4', text: 'Proficiencies' }
+    { id: '3', text: 'Motivations' },
+    { id: '4', text: 'Bonds' },
+    { id: '5', text: 'Proficiencies' }
   ]
 
 div.sheet-nav-bar
