New Header Setup
Added masterGrid for whole sheet
Added header grid
Set up header styles
Changed images to css background images
Removed unused styles
Removed unused multiple tab functionality
Created Roller style
Added roller to masterGrid

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -47,65 +47,6 @@ input.sheet-capitalShipSelector:checked ~ div.sheet-capitalShipSheet
 	display: block;
 }
 
-/* Multiple Tab Functionality */
-div.sheet-tabType
-{
-	display: none;
-}
-
-input.sheet-tab1Selector:checked ~ div.sheet-tab1,
-input.sheet-tab2Selector:checked ~ div.sheet-tab2,
-input.sheet-tab3Selector:checked ~ div.sheet-tab3
-{
-	display: block;
-}
-/*Hide Radio Buttons for tabs*/
-input[type="radio"].sheet-tabSelector
-{
-	opacity: 0;
-	position: relative;
-	width: 150px;
-	height: 20px;
-	top: 18px;
-	left: 400px;
-	cursor: pointer;
-	z-index: 3;
-	white-space: nowrap;
-	margin: 2px;
-}
-	/*Fake tabs*/
-	input[type="radio"].sheet-tabSelector + span::before
-	{
-		content: attr(title);
-		border: solid 1px #a8a8a8;
-		position: absolute;
-		top: 185px;
-		left: 410px;
-		line-height: 20px;
-		text-align: center;
-		vertical-align: middle;
-		background: #D3D3D3;
-		width: 150px;
-		height: 20px;
-		z-index: 0;
-		font-size: 10px;
-	}
-
-input[type="radio"].sheet-tab2 + span::before
-{
-	left: 572px;
-}
-
-input[type="radio"].sheet-tab3 + span::before
-{
-	left: 730px;
-}
-/*Change selected tab appearence*/
-input.sheet-tabSelector:checked + span::before
-{
-	background: #fff;
-	border-bottom-color: #fff;
-}
 
 /*General Sheet Style*/
 body
@@ -117,19 +58,6 @@ body
 	line-height: 150%;
 	max-width: 900px;
 	min-width: 900px;
-}
-
-.sheet-header
-{
-	display: block;
-	vertical-align: middle;
-	max-width: 900px;
-	min-width: 900px;
-}
-
-img.sheet-BGImg
-{
-	z-index: -1;
 }
 
 h1, h2, h3, h4, th
@@ -277,13 +205,6 @@ input[type="number"].sheet-sixth
 	width: 12%;
 }
 
-select.sheet-typeSelector
-{
-	font-variant: small-caps;
-	width: 37%;
-	border: none;
-}
-
 textarea
 {
 	border: none;
@@ -310,6 +231,14 @@ textarea
 	}
 
 /* Master Grids */
+.sheet-masterGrid
+{
+	width: 900px;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 100px auto;
+	grid-template-areas: "header" "roller";
+}
 
 .sheet-crewmemberSheetGrid
 {
@@ -402,7 +331,6 @@ textarea
 	padding: 6px;
 	grid-column-gap: 4px;
 }
-
 
 .sheet-creatureSheetGrid
 {
@@ -504,6 +432,62 @@ textarea
 	grid-column-gap: 4px;
 }
 
+/*     Sheet header layout    */
+div.sheet-header
+{
+	grid-area: header;
+	display: grid;
+	grid-template-columns: 1fr 375px;
+	grid-template-rows: 1fr 32px 1fr;
+	grid-template-areas:"title . " "title selector" "title version" ;
+	width: 900px;
+	height: 100px;
+}
+
+div.sheet-title
+{
+	grid-area: title;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/master/Free%20Spacer/images/title.png);
+	background-size: 300px 35.57px;
+	background-repeat: no-repeat;
+	background-position:center;
+	width: 300px;
+	height: 100px;
+	align-self: center;
+}
+
+.sheet-selectorBar
+{
+	grid-area: selector;
+	justify-self: stretch;
+}
+
+select.sheet-typeSelector
+{
+	width: 235px;
+	font-variant: small-caps;
+	border: none;
+}
+
+.sheet-version
+{
+	grid-area: version;
+	justify-self:end;
+	font-variant:small-caps;
+	font-size: 11px;
+
+}
+
+/* Roller Widget */
+.sheet-roller
+{
+	grid-area: roller;
+	display: grid;
+	width: 900px;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr;
+	background-color: darkslategrey;
+}
 
 /* ******************************* */
 /*			Aspects		           */
@@ -4934,46 +4918,9 @@ div.sheet-colorselector
 	color: white;
 	align-self: center;
 }
-/*     Sheet header layout    */
-div.sheet-header
-{
-	display: flex;
-	flex-flow: row nowrap;
-	align-items: center;
-	justify-content: space-between;
-	width: 900px;
-}
 
-div.sheet-header
-{
-	font-weight: bold;
-}
 
-img.sheet-title
-{
-	width: 400px;
-}
-
-.sheet-header h4
-{
-	margin: 15px 0px 0px 35px;
-}
-
-div.sheet-selector-sheettype
-{
-	display: flex;
-	flex-flow: column nowrap;
-}
-
-select.sheet-typeSelector
-{
-	width: 235px;
-}
-
-hr
-{
-	margin: 10px;
-}
+/* Sheet Styles*/
 
 .sheet-subtitlesGrid
 {
