Truly Rebased the code for MadCoder's fork

--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1,11 +1,11 @@
 /*
 To add a sheet style:
 
-* Add a CSS rule for .sheeet-color-setting-X ~ .sheet-wrapper , were X is the following number to the highest one from the available styles.
-    - Within it, set the CSS variables for the colors to use, use the existing styles as a baseline to simplify this. 
-* Add a color-setting <input> element at the begging of the sheet HTML, directly before sheet-wrapper, using the same number X you've used on the CSS rule
-* Increase by one the StyleCount variable at the start of the sheet worker at the begining of the sheet HTML (it should be one higher than X)
-* Go to  <select name="attr_sheetstyle"/> on the sheet HTML to add a new option, with X as value, and the name you wish to give the style
+Add a CSS rule for .sheeet-color-setting-X ~ .sheet-wrapper , were X is the following number to the highest one from the available styles.  
+    Within it, set the CSS variables for the colors to use, use the existing styles as a baseline to simplify this. 
+Add a color-setting <input> element at the begging of the sheet HTML, directly before sheet-wrapper, using the same number X you've used on the CSS rule
+Increase by one the StyleCount variable at the start of the sheet worker at the begining of the sheet HTML (it should be one higher than X)
+Go to  <select name="attr_sheetstyle"/> on the sheet HTML to add a new option, with X as value, and the name you wish to give the style
 
 */
 
@@ -107,7 +107,6 @@ To add a sheet style:
     overflow: auto;
     outline: 1px solid gray;
 }
-
 .sheet-label {
     font-weight: bold;
     text-align: right;
@@ -232,10 +231,6 @@ input[name="attr_announcements_hide"][value="1"] ~ .sheet-update-alert {
     font-size: 11px;
 }
 
-
-.sheet-wrapper button[type=roll]{
-    box-shadow: none!important;
-}
 /* Default d6 for all skill rolls */
 .sheet-wrapper button[type=roll]::before {
     font-family: "dicefontd6";
@@ -393,11 +388,15 @@ input.sheet-range-damage-dice-icon[value="d4skull"] ~ button[type=roll].roll_dam
 .sheet-row {
     height: 22px;
     width: 100%;
-    display: flex !important;
     flex-wrap: wrap;
     align-items: center;
     margin-top: 2px;
 }
+
+.sheet-tab1 .sheet-row{
+    display:flex!important;
+}
+
 .sheet-row:nth-child(1), .sheet-row+.sheet-hr{
     height: auto;
 }
@@ -410,16 +409,11 @@ input.sheet-range-damage-dice-icon[value="d4skull"] ~ button[type=roll].roll_dam
 }
 
 .sheet-cell {
-    text-align: center;
     box-sizing: border-box;
     float: left;
     height: 22px;
     line-height: 22px;
     padding: 0px 1px;
-}
-
-.sheet-cell{
-    padding-top: 0px!important;
 }
 
 .sheet-cell > * {
@@ -450,11 +444,11 @@ input {
 
 .charsheet .sheet-row input[type="number"]:-moz-read-write{border-bottom: 1px solid var(--border-color);}
 
-.sheet-box .sheet-row-details,
+.sheet-box .sheet-row-details ,
 .sheet-box .sheet-row-details2,
 .sheet-box .sheet-melee-notebox,
 .sheet-box .sheet-ranged-notebox {
-    background: #FAFAFA;
+    background: var(--sheet-bg);
 }
 
 .sheet-speed-range-table {
@@ -559,7 +553,9 @@ input.sheet-tab0 + span {
 
 .sheet-toggle:checked ~ .sheet-row-details { 
     display: inline-block; 
-    margin: 0 0 2px 0;
+    margin: 0 0 2px 48px;
+    border-left: 2px solid var(--border-color);
+    border-bottom: 2px solid var(--border-color);
 }
 
 .sheet-toggle ~ .sheet-row-details { 
@@ -770,12 +766,12 @@ input.sheet-tab0 + span {
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input {
     float: left;
-    width: 190px;
+    width: 290px;
     margin-right: 5px;
 }
 
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input textarea {
-    width: 178px;
+    width: 278px;
     height: 55px;
 }
 
@@ -1103,20 +1099,6 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-attribute .sheet-row-perception .sheet-col0 { font-size: 16px; }
 .sheet-attribute .sheet-row-perception .sheet-col1 input { font-size: 16px; }
 
-.sheet-attribute .sheet-row-perception .sheet-whisper-box .sheet-whisper-checkbox {
-    float: left;
-    width: 16px;
-}
-
-.sheet-attribute .sheet-row-perception .sheet-whisper-box .sheet-whisper-checkbox input[type=checkbox] {
-    height: 15px;
-}
-
-.sheet-attribute .sheet-row-perception .sheet-whisper-box .sheet-whisper-title {
-    float: left;
-}
-
-
 .sheet-attribute .sheet-row-willpower { height: 25px; }
 .sheet-attribute .sheet-row-willpower .sheet-col0 { font-size: 16px; }
 .sheet-attribute .sheet-row-willpower .sheet-col1 input { font-size: 16px; }
@@ -1132,9 +1114,6 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     color: #404040;
 }
 
-.sheet-hp-lift-container{float: left; width:186px}
-
-.sheet-stats{width: 180px;}
 .sheet-stats input { font-size: 13px;}
 .sheet-stats .sheet-header .sheet-col0 { width: 72px; }
 .sheet-stats .sheet-header .sheet-col1 { width: 41px; }
@@ -1277,7 +1256,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-points .sheet-row .sheet-col0 { width: 60px; }
 .sheet-points .sheet-row .sheet-col1 { width: 40px; }
 .sheet-points .sheet-row .sheet-unspent-points-label {
-    color: var(--point-label-text);
+    color: #4f91cd;
 }
 .sheet-points .sheet-row .sheet-unspent-points input {
     font-size: 14px;
@@ -1424,9 +1403,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     border-bottom: 1px solid var(--border-color);
     margin-bottom: 5px;
 }
-
-
-.sheet-container-feats .sheet-row .sheet-title { text-align: center;}
+.sheet-container-feats .sheet-row .sheet-title { text-align: center; }
 .sheet-container-feats .sheet-row .sheet-col0 { width: 50px; }
 .sheet-container-feats .sheet-row .sheet-col1 { width: 35px; }
 .sheet-container-feats .sheet-row .sheet-col2 { width: 40px; }
@@ -1434,18 +1411,19 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 
 .sheet-container-feats .sheet-feats-child {
     float: left;
+    width: 30%;
 }
 
 .sheet-container-feats .sheet-container-flying {
-    margin-left: 8px;
+    margin-left: 10px;
 }
-.sheet-container-swimming, .sheet-container-flying,.sheet-container-jumping{ max-width: 30%;}
+
 .sheet-container-feats .sheet-container-swimming {
-    margin-left: 16px;
+    margin-left: 20px;
 }
 
 .sheet-container-feats .sheet-container-jumping {
-    margin-left: 16px;
+    margin-left: 20px;
 }
 
 /* show/hide table */
@@ -1494,7 +1472,6 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-traits .sheet-header {
-    color:var(--header-tex);
     background: var(--header-bg);
 }
 
@@ -1522,7 +1499,6 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-disadvantages { width: calc(100% - 0.4em); }
 
 .sheet-disadvantages .sheet-header {
-    color:var(--header-tex);
     background: var(--header-bg);
 }
 
@@ -1554,7 +1530,6 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-racial { width: calc(100% - 0.4em); }
 
 .sheet-racial .sheet-header {
-    color:var(--header-tex);
     background: var(--header-bg);
 }
 
@@ -1605,7 +1580,6 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-general-bio .sheet-header {
-    color:var(--header-text);
     background: var(--header-bg);
     margin-bottom: 5px;
 }
@@ -1645,7 +1619,6 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 .sheet-bio-description .sheet-header,
 .sheet-encumberance .sheet-header {
-    color:var(--header-text);
     background: var(--header-bg);
     margin-bottom: 5px;
 }
@@ -1708,7 +1681,6 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-background-info .sheet-header {
-    color:var(--header-text);
     background: var(--header-bg);
     margin-bottom: 5px;
 }
@@ -1773,7 +1745,6 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-misc-notes .sheet-header {
-    color:var(--header-text);
     background: var(--header-bg);
     margin-bottom: 5px;
 }
@@ -1809,7 +1780,6 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-training-notes .sheet-header {
-    color:var(--header-text);
     background: var(--header-bg);
     margin-bottom: 5px;
 }
@@ -1995,9 +1965,25 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 /* -- COMBAT -- */
 .sheet-active-defense { width: calc(100% - 140px - 0.8em); }
 
-.sheet-active-defense .sheet-col-dodge-label { width: 262px; }
+.sheet-active-defense .sheet-margin-left {
+    margin-left: 43px;
+}
 
-.sheet-active-defense .sheet-col-dodge { width: calc(100% - 431px); }
+.sheet-active-defense .sheet-static-defense-width {
+    margin-left: 43px;
+    width: calc(100% - 43px);
+}
+.sheet-active-defense .sheet-col-dodge-label { width: 305px; }
+
+.sheet-active-defense .sheet-col-dodge { width: calc(100% - 589px); }
+
+.sheet-combat-reflexes {
+    margin: 5px 0 0 5px;
+}
+
+.sheet-combat-reflexes .sheet-tooltip {
+    margin-left: 0;
+}
 
 .sheet-active-defense input.sheet-combat-reflex-check {
     width: 22px!important; 
@@ -2029,12 +2015,57 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 /* -- ACTIVE DEFENSE -- */
-.sheet-active-defense .sheet-col0 { width: calc(100% - 169px); }
+.sheet-active-defense .sheet-col0 {
+    margin-left: 42px;
+    width: calc(100% - 326px);
+}
+
+.sheet-active-defense .sheet-reset  {
+    height: 19px;
+    line-height: 19px;
+    color: white;
+    background: darkred;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
+.sheet-active-defense .sheet-col-input-wide {
+    width: calc(100% - 167px);
+}
+
 .sheet-active-defense .sheet-col0 input { text-align:left; }
-.sheet-active-defense .sheet-col1 { width: 65px; }
+.sheet-active-defense .sheet-col1 { width: 105px; }
 .sheet-active-defense .sheet-col2 { width: 40px; }
 .sheet-active-defense .sheet-col3 { width: 30px; }
 .sheet-active-defense .sheet-col4 { width: 22px; }
+
+/* -- Active Defense Note Box -- */
+
+.sheet-active-defense input.sheet-toggle-highlight[type="checkbox"] {
+    width: 16px;
+    height: 22px;
+    opacity: 1;
+    position: absolute;
+    margin-left: 5px;
+}
+
+.sheet-active-defense .sheet-toggle-notes {
+    position: absolute;
+    left: 22px;
+}
+
+.sheet-active-defense .sheet-toggle-notes.sheet-static-defense {
+    position: absolute;
+    left: 54px;
+}
+
+.sheet-box.sheet-active-defense .sheet-toggle.sheet-toggle-notes ~ .sheet-checkbox {
+    left: 22px;
+}
+
+.sheet-box.sheet-active-defense .sheet-toggle.sheet-toggle-notes ~ .sheet-checkbox.sheet-static-defense {
+    left: 54px;
+}
 
 /* Text Area Box Styling for Defense Bonus (DB) Notes*/
 .sheet-defense-bonus-notes .sheet-header .sheet-col0 {
@@ -2057,7 +2088,7 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 /* -- DEFENSE BONUS -- */
-.sheet-defense-bonus-notes { width: calc(100% - 0.4em); }
+.sheet-defense-bonus-notes { margin-top: 5px; width: calc(100% - 0.4em); }
 
 
 /* -- Melee Attacks -- */
@@ -2119,7 +2150,9 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 .sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-stats,
 .sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-details2,
 .sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-melee-notebox,
-.sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-ranged-notebox {
+.sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-ranged-notebox,
+.sheet-active-defense input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-stats,
+.sheet-active-defense input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-notebox {
     background: #B7FFAA;    
 }
 
@@ -2244,8 +2277,7 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 .sheet-firing-up-down .sheet-table .sheet-title {
-    color:var(--header-text);
-    background: var(--header-bg);
+    background-color: var(--header-bg);
 }
 
 .sheet-firing-up-down .sheet-table .sheet-title .sheet-cell {
@@ -2301,8 +2333,7 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 .sheet-falling-collision .sheet-table .sheet-title {
-    color:var(--header-text);
-    background: var(--header-bg);
+    background-color: var(--header-bg);
 }
 
 .sheet-falling-collision .sheet-table .sheet-title .sheet-cell {
