Salvo Roller Set up
Basic Set up for the Salvo Roller

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -237,7 +237,7 @@ textarea
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 100px auto;
-	grid-template-areas: "header" "roller";
+	grid-template-areas: "header" "salvo";
 }
 
 .sheet-crewmemberSheetGrid
@@ -439,7 +439,7 @@ div.sheet-header
 	display: grid;
 	grid-template-columns: 1fr 375px;
 	grid-template-rows: 1fr 32px 1fr;
-	grid-template-areas:"title . " "title selector" "title version" ;
+	grid-template-areas: "title . " "title selector" "title version";
 	width: 900px;
 	height: 100px;
 }
@@ -447,10 +447,10 @@ div.sheet-header
 div.sheet-title
 {
 	grid-area: title;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/master/Free%20Spacer/images/title.png);
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/RollTemplate/Free%20Spacer/images/title.png);
 	background-size: 400px 100px;
 	background-repeat: no-repeat;
-	background-position:center;
+	background-position: center;
 	width: 400px;
 	height: 100px;
 	align-self: center;
@@ -472,21 +472,75 @@ select.sheet-typeSelector
 .sheet-version
 {
 	grid-area: version;
-	justify-self:end;
-	font-variant:small-caps;
+	justify-self: end;
+	font-variant: small-caps;
 	font-size: 11px;
-
 }
 
-/* Roller Widget */
-.sheet-roller
+/* Salvo Widget */
+.sheet-salvo
+{
+	grid-area: salvo;
+	display: grid;
+	width: 900px;
+	height: 150px;
+	grid-template-columns: 1fr 80px 1fr;
+	grid-template-rows: 32px 1fr;
+	grid-template-areas: "title title title" "taskDice roller threatDice";
+	background-color: lightgray;
+}
+
+.sheet-salvoTitle
+{
+	grid-area: title;
+	justify-self: center;
+}
+
+.sheet-taskDice
+{
+	grid-area: taskDice;
+	display: grid;
+	grid-template-columns: 10px 24px 1fr 1fr 2fr;
+	grid-template-rows: 32px repeat(3,1fr);
+}
+
+.sheet-taskTitle
+{
+	justify-self: start;
+	justify-self: center;
+}
+
+.sheet-threatDice
+{
+	grid-area: threatDice;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 32px 1fr;
+}
+
+.sheet-threatTitle
+{
+	justify-self: start;
+	justify-self: center;
+}
+
+.sheet-rollSalvo
 {
 	grid-area: roller;
 	display: grid;
-	width: 900px;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr;
-	background-color: darkslategrey;
+	grid-template-columns: 1fr;
+	grid-template-rows: 32px 80px;
+	height: 112px;
+	justify-self: center;
+}
+
+button[type=roll].sheet-rollButton
+{
+	font-size: 42px;
+	width: 60px;
+	height: 60px;
+	align-self: center;
+	justify-self: center;
 }
 
 /* ******************************* */
